--- a/.gitignore
+++ b/.gitignore
@@ -11,9 +11,8 @@ pubspec.lock
 # Directory created by dartdoc
 # If you don't generate documentation locally you can remove this line.
 doc/api/
+.vscode/
 android/local.properties
-android/.gradle/4.10.2/fileHashes/fileHashes.bin
-android/.gradle/4.10.2/fileHashes/fileHashes.lock
-android/.gradle/4.10.2/taskHistory/taskHistory.bin
-android/.gradle/4.10.2/taskHistory/taskHistory.lock
-android/.gradle/buildOutputCleanup/buildOutputCleanup.lcok
+android/.gradle/4.10.2/fileHashes/
+android/.gradle/4.10.2/taskHistory/
+android/.gradle/buildOutputCleanup/buildOutputCleanup.lock
