--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,16 @@ flutter:
   assets:
   - assets/images/icon.png
   - assets/images/iconlong.png
+  - assets/fonts/NanumSquareRoundB.ttf
+
+  fonts:
+    - family: NanumSquareRound
+      fonts:
+        - asset: assets/fonts/NanumSquareRoundB.ttf
+    - family: BMJUA
+      fonts:
+        - asset: assets/fonts/BMJUA_ttf.ttf
+      
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
