--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,12 +49,18 @@ flutter:
   assets:
   - assets/images/icon.png
   - assets/images/iconlong.png
-  - assets/fonts/NanumSquareRoundB.ttf
 
   fonts:
+    # Font weight value is defined as https://docs.flutter.io/flutter/dart-ui/FontWeight-class.html
     - family: NanumSquareRound
       fonts:
         - asset: assets/fonts/NanumSquareRoundB.ttf
+          weight: 700
+        - asset: assets/fonts/NanumSquareRoundR.ttf
+        - asset: assets/fonts/NanumSquareRoundEB.ttf
+          weight: 800
+        - asset: assets/fonts/NanumSquareRoundL.ttf
+          weight: 300
     - family: BMJUA
       fonts:
         - asset: assets/fonts/BMJUA_ttf.ttf
@@ -67,23 +73,6 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.io/assets-and-images/#from-packages
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
 
