jw_190423_0243_첫페이지(initpage)구현완료, registerpage생성, loginpage생성

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ flutter:
   assets:
   - assets/images/icon.png
   - assets/images/iconlong.png
+  - assets/images/icon_noguideline.png
 
   fonts:
     # Font weight value is defined as https://docs.flutter.io/flutter/dart-ui/FontWeight-class.html
